# trzcina

./: Cargo.toml  Makefile  README.md  package-lock.json  package.json
trzcina/: Cargo.toml
trzcina-local-service/: Cargo.toml
trzcina-local-service/src/: lib.rs  local_registered_service.rs  local_running_service_collection.rs  local_service_manager.rs
trzcina-local-service/tests/: local_coordinates_via_shared_holder_between_two_services.rs  local_register_bundle_propagates_error_from_bundle.rs  local_register_bundle_runs_all_services_returned_by_bundle.rs  local_register_service_runs_registered_service.rs  local_run_aborts_hung_service_after_shutdown_deadline.rs  local_run_aborts_hung_services_on_external_cancel.rs  local_run_cancels_all_services_when_external_token_cancelled.rs  local_run_cancels_siblings_when_one_service_finishes_first.rs  local_run_completes_immediately_when_no_services_registered.rs  local_run_completes_when_all_services_finish_simultaneously.rs  local_run_leaves_external_token_uncancelled_after_error_exit.rs  local_run_leaves_external_token_uncancelled_after_normal_exit.rs  local_run_records_all_failures_when_multiple_services_error.rs  local_run_records_non_string_panic_payload.rs  local_run_records_service_error_and_cancels_siblings.rs  local_run_records_service_panic_and_cancels_siblings.rs  local_run_records_string_literal_panic_payload.rs  local_runs_non_send_service.rs  local_runs_tokio_spawn_local_inside_service.rs  local_supports_actix_style_shutdown_signal_pattern.rs  local_supports_internal_retry_loop_pattern.rs  local_supports_interval_ticker_reconciliation_pattern.rs  local_supports_multi_channel_select_pump_pattern.rs  local_supports_mutable_internal_state_across_iterations.rs  local_supports_notify_driven_event_loop_pattern.rs
trzcina-service/: Cargo.toml
trzcina-service/src/: lib.rs  manager.rs  run_to_completion_options.rs  running_collection.rs  running_service.rs  service_shutdown_error.rs  service_shutdown_outcome_collection.rs  service_shutdown_outcome_with_service_name.rs
trzcina-service/tests/: display_propagates_writer_errors.rs  run_to_completion_options_default_uses_ten_second_deadline.rs  service_shutdown_error_display_formats_all_failure_variants.rs
trzcina/src/: failed_service_outcomes.rs  first_tick_timing.rs  lib.rs  local_running_service_collection.rs  local_service.rs  local_service_bundle.rs  local_service_manager.rs  registered_service.rs  running_service_collection.rs  service.rs  service_bundle.rs  service_manager.rs  service_outcome_classifier.rs  service_shutdown_error.rs  service_shutdown_options.rs  service_shutdown_outcome.rs  service_shutdown_outcome_with_service_name.rs  service_task_drainer.rs  sibling_cancellation_guard.rs  tick_context.rs  ticker.rs
trzcina/tests/: coordinates_via_shared_holder_between_two_services.rs  local_coordinates_via_shared_holder_between_two_services.rs  local_register_bundle_propagates_error_from_bundle.rs  local_register_bundle_runs_all_services_returned_by_bundle.rs  local_register_service_runs_registered_service.rs  local_run_aborts_hung_service_after_shutdown_deadline.rs  local_run_aborts_hung_services_on_external_cancel.rs  local_run_cancels_all_services_when_external_token_cancelled.rs  local_run_cancels_siblings_when_one_service_finishes_first.rs  local_run_completes_immediately_when_no_services_registered.rs  local_run_completes_when_all_services_finish_simultaneously.rs  local_run_records_all_failures_when_multiple_services_error.rs  local_run_records_non_string_panic_payload.rs  local_run_records_service_error_and_cancels_siblings.rs  local_run_records_service_panic_and_cancels_siblings.rs  local_run_records_string_literal_panic_payload.rs  local_runs_non_send_service.rs  local_runs_tokio_spawn_local_inside_service.rs  local_supports_actix_style_shutdown_signal_pattern.rs  local_supports_internal_retry_loop_pattern.rs  local_supports_interval_ticker_reconciliation_pattern.rs  managers_implement_common_trait.rs  (+33 more)
(+32 files in other folders)
