[workspace]
resolver = "3"
members = ["trzcina"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
futures-util = "0.3"
log = "0.4.27"
thiserror = "2.0"
tokio = { version = "1.45", features = ["full", "time"] }
tokio-util = "0.7"

[workspace.lints.clippy]
ignored_unit_patterns = "warn"
must_use_candidate = "warn"
