[package]
name = "trzcina-local-service"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Local (!Send) services for trzcina: cooperative async lifecycle on a tokio LocalSet."
repository = "https://github.com/intentee/trzcina"
homepage = "https://github.com/intentee/trzcina"
readme = "../README.md"
authors = ["Intentee"]
keywords = ["async", "service", "lifecycle", "cancellation", "tokio"]
categories = ["asynchronous", "concurrency"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
trzcina-service = { version = "0.2.0", path = "../trzcina-service" }

[lints]
workspace = true
