[package]
name = "trzcina-service"
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
description = "Shared primitives for trzcina: service lifecycle outcomes, errors, and shutdown machinery."
repository = "https://github.com/intentee/trzcina"
homepage = "https://github.com/intentee/trzcina"
readme = "../README.md"
authors = ["Intentee"]
keywords = ["async", "service", "lifecycle", "cancellation", "tokio"]
categories = ["asynchronous", "concurrency"]

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
